<resources>
    <string name="app_name">Beer Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="recipe_name">Name</string>
    <string name="new_recipe_heading">New Recipe</string>

    <string name="beer_style_heading_fragment">Select Beer Style</string>
    <string name="recipe_size_heading_fragment">What size should the recipe be (in gallons)?</string>
    <string name="recipe_size_hint_text">Size in gallons</string>
    <string name="cancel_menu_item_text">Cancel</string>
    <string name="button_generate_recipe">Generate</string>
    <string name="generated_recipe_heading">What should the name of the recipe be?</string>
    <string name="recipe_name_hint">Recipe name</string>
    <string name="recipe_view_style_name">Style: %1$s</string>
    <string name="recipe_view_size">%1$s gallons</string>
    <string name="recipe_view_version_number">Version %1$d</string>
    <string name="recipe_view_abv">%1$s%% ABV</string>
    <string name="recipe_view_color">%1$s SRM</string>
    <string name="recipe_view_ibu">%1$s IBU</string>
    <string name="recipe_view_mash_strike_water">%.2f gallons of strike water at %2$s°F</string>
    <string name="recipe_view_sparge_water">%.2f gallons of sparge water</string>
    <string name="recipe_view_total_water">%.2f gallons water</string>
    <string name="recipe_view_mash_step">%1$s min. %2$s°F</string>
    <string name="recipe_view_fermentation_step">%1$s days %2$s°F</string>
    <string name="recipe_view_misc_ingredient">%1$s %2$s %3$s (%4$s)</string>
    <string name="recipe_abv_heading_fragment">What should the alcohol by volume (ABV) percentage be?</string>
    <string name="new_recipe_btn_desc">New recipe</string>
    <string name="recipe_color_heading_fragment">What should the color of the beer be?</string>
    <string name="grainsHeading">Grains</string>
    <string name="grainListItem">%1$s lbs %2$s</string>
    <string name="hopsHeading">Hops</string>
    <string name="hopListBoilItem">%1$s oz. %2$s (%3$s min. remaining in boil)</string>
    <string name="hopListWhirlpoolItem">%1$s oz. %2$s (whirlpool %3$s min.)</string>
    <string name="hopListDryHopItem">%1$s oz. %2$s (dry hop %3$s to %4$s days into fermentation)</string>
    <string name="originalGravity">%.3f OG</string>
    <string name="finalGravity">%.3f FG</string>
    <string name="yeastHeading">Yeast</string>
    <string name="yeastIngredient">%1$s (%2$s)</string>
    <string name="waterHeading">Water</string>
    <string name="mashStepsHeading">Mash Steps</string>
    <string name="fermentationStepsHeading">Fermentation Steps</string>
    <string name="recipe_bitterness_heading_fragment">What should the bitterness of the beer be? (The greater the IBU value, the more bitter.)</string>

    <string name="unknown">Unknown error. Check the logs for trace</string>
    <string name="sign_out_success">Signed out</string>
    <string name="operation_cancelled">Operation cancelled</string>
    <string name="authorized">Signed in</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="title_activity_settings">Settings</string>
    <string name="profileHeadingText">Profile</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="swipe_left_text_hint">‹</string>
    <string name="swipe_right_text_hint">›</string>
    <string name="loadingIndicator">Loading …</string>
    <string name="action_edit">Edit</string>
    <string name="grainPoundsHint"><font size="14">lbs.</font></string>
    <string name="grainAmountUnit">lbs</string>
    <string name="addGrainHeading">Add Grain</string>
    <string name="btnUpdateRecipe">Update</string>
    <string name="btnUpdateBatch">Update</string>
    <string name="searchHintText">Search …</string>
    <string name="hopOuncesHint"><font size="14">oz.</font></string>
    <string name="hopAmountUnit">oz</string>
    <string name="hopAdditionTimeHint"><font size="14">min.</font></string>
    <string name="hopAdditionTimeUnit">min.</string>
    <string name="addHopHeading">Add Hop</string>
    <string name="app_info">App Info</string>
    <string name="build_date">Build date:</string>
    <string name="version">Version:</string>
    <string name="mash_extraction_efficiency">Mash Extraction Efficiency%:</string>
    <string name="extraction_efficiency_percentage">%</string>
    <string name="mash_thickness_hint">ratio</string>
    <string name="settings_heading">Settings</string>
    <string name="recipe_size_label">Default Recipe Size:</string>
    <string name="mash_strike_water_heading">Mash strike water:</string>
    <string name="mash_thickness_heading">Mash Thickness (qts/lb):</string>
    <string name="extraction_efficiency_error">Extraction Efficiency should be between 0 and 100!</string>
    <string name="miscIngredientsHeading">Miscellaneous Ingredients</string>
    <string name="recipe_size_hint">e.g. 5</string>
    <string name="brewed_on">Brewed: %s</string>
    <string name="boil_duration_heading">Boil Duration:</string>
    <string name="boil_duration_hint">min.</string>
    <string name="grain_temperature_heading">Grain Temperature (°F):</string>
    <string name="grain_temperature_hint">e.g. 65</string>
    <string name="equipment_loss_hint">e.g. 0.5</string>
    <string name="trub_loss_heading">Trub Loss (gallons):</string>
    <string name="trub_loss_hint">e.g. 0.5</string>
    <string name="equipment_loss_heading">Equipment Loss (gallons):</string>
    <string name="abv_checkbox_label">ABV:</string>
    <string name="search_range_label">to</string>
    <string name="search_btn_text">Search</string>
    <string name="expand_search_content_desc">Expand search</string>
    <string name="recipes_count">%1$s recipes</string>
    <string name="color_label">Color:</string>
    <string name="ale_checkbox_label">Ale</string>
    <string name="lager_checkbox_label">Lager</string>
    <string name="fermentable_search_btn_label">+ Fermentable</string>
    <string name="hop_search_btn_label">+ Hop</string>
    <string name="batches_heading_label">Batches</string>
    <string name="assistant_brewer_label">Assistant Brewer:</string>
    <string name="notes_label">Notes:</string>
    <string name="gravity_readings_label">Gravity Readings</string>
    <string name="fermentation_schedule_heading">Fermentation Schedule</string>
    <string name="fermentation_complete_template">%1$s: Complete</string>
    <string name="fermentation_step_template">%1$s: %2$s°F</string>
    <string name="current_abv_label">Current ABV:</string>
    <string name="projected_abv_label">Projected ABV:</string>
    <string name="batch_notes_hint">Batch notes…</string>
    <string name="add_gravity_reading_label">Add Gravity Reading:</string>
    <string name="checkbox_refractometer_reading_label">Convert from refractometer reading</string>
    <string name="assistant_brewer_name_hint">Assistant brewer name</string>
    <string name="new_batch">New Batch</string>
    <string name="last_updated_on_label">Last updated on %1$s</string>
    <string name="days_since_last_updated_label">Last updated:</string>
    <string name="retry_load_button">Retry</string>
    <string name="delete_grain_button_description">Delete Grain</string>
    <string name="delete_hop_button_description">Delete Hop</string>
    <string name="ascending_label">Ascending</string>
    <string name="descending_label">Descending</string>
    <string name="sort_by_label">Sort by:</string>
    <string name="dry_hop_entry_hint">day</string>
    <string name="dry_hop_days_label">days</string>
    <string name="dry_hop_range_label">-</string>
    <string name="recipe_name_dots_hint">Name…</string>
    <string name="batches_in_progress">Batches In Progress</string>
    <string name="no_batches_in_progress">No batches in progress</string>
    <string name="search">Search</string>
</resources>
