<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
            android:id="@+id/btnDeleteHop"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/deleteText"
            android:textAllCaps="false" />

    <EditText
            android:id="@+id/txtHopAmountEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hopOuncesHint"
            android:hint="@string/hopOuncesHint"
            android:inputType="numberDecimal" />

    <TextView
            android:id="@+id/txtHopAmountUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hopAmountUnit"
            android:layout_marginEnd="4dp" />

    <TextView
            android:id="@+id/txtHopEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    <EditText
            android:id="@+id/txtHopAdditionTimeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hopAdditionTimeHint"
            android:hint="@string/hopAdditionTimeHint"
            android:inputType="number" />

    <TextView
            android:id="@+id/txtHopAdditionTimeUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hopAdditionTimeUnit" />
</LinearLayout>